--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 <script>
   window.fbAsyncInit = function () {
     FB.init({
-      appId: 'App id facebook',
+      appId: "app id facebbok",
       cookie: true,
       xfbml: true,
       version: 'v7.0'
